# map_analyse

./: .env.example  .gitignore  .gitmodules  .tmp-render-fn.js  Makefile  README.md  main.py
core/: config.py  (+2 more)
gaode-map/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  script_0.js  test_api.py
gaode-map/.github/workflows/: repo-hygiene.yml
gaode-map/core/: config.py  exceptions.py  models.py
gaode-map/docker/: Dockerfile
gaode-map/docs/: agent开发.md  architect.md  prd.md  工具开发.md  技术.md  技术栈.md  目录约束.md  网格分析公式对照表.md  计划.md
gaode-map/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gaode-map/frontend/scripts/: check-build-sync.mjs
gaode-map/frontend/src/: main.ts
gaode-map/frontend/tests/: agent-derived.test.js  agent-normalizers.test.js  agent-sessions.test.js  export-bundle.test.js  history-list-navigation.test.js  (+3 more)
gaode-map/modules/: __init__.py
gaode-map/router/: __init__.py  admin.py  app.py
gaode-map/share/: type_map.json
gaode-map/store/: __init__.py  agent_session_repo.py  database.py  fingerprint.py  history_keys.py  history_repo.py  map_repo.py  models.py  polygon_repo.py
gaode-map/templates/: analysis.html  map_base.html  map_with_filters.html
gaode-map/tests/: conftest.py  test_grid.py  test_h3_analysis_api.py  test_h3_analysis_core.py  test_h3_grid_api.py  test_h3_grid_core.py  test_isochrone.py  test_poi_recursive.py
gaode-map/utils/: __init__.py  exporter.py  parse_json.py  templates.py
(+392 files in other folders)
