[project]
name = "gaode-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "apscheduler==3.10.4",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "et-xmlfile==2.0.0",
    "fastapi==0.109.0",
    "greenlet==3.3.0",
    "gunicorn==21.2.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "jinja2==3.1.4",
    "markupsafe==3.0.3",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pydantic==2.5.3",
    "pydantic-core==2.14.6",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.45",
    "starlette==0.35.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
    "uvicorn==0.27.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "h3>=3.7.0",
    "esda>=2.6.0",
    "libpysal>=4.10.0",
    "pymysql>=1.1.0",
    "shapely>=2.0.0",
    "aiohttp>=3.9.0",
    "cryptography",
]
